k8s-manifests/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-load-balancer-controller
spec:
  controllerName: gateway.aws.com/controller
