k8s-manifests/gateway-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    name: gateway-system
